<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_main_menu_txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="20sp"
                android:gravity="center"
                android:text="@string/activity_main_menu_txt_title"
                android:textSize="20sp" />

            <Button
                android:id="@+id/activity_main_menu_btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10sp"
                android:text="@string/activity_main_menu_txt_btn_sign_up" />

            <Button
                android:id="@+id/activity_main_menu_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10sp"
                android:text="@string/activity_main_menu_txt_btn_login" />

            <Button
                android:id="@+id/activity_main_menu_btn_bmi_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10sp"
                android:text="@string/activity_main_menu_txt_btn_bmi_create" />

            <Button
                android:id="@+id/activity_main_menu_btn_bmi_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10sp"
                android:text="@string/activity_main_menu_txt_btn_bmi_search" />

            <Button
                android:id="@+id/activity_main_menu_btn_exit_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10sp"
                android:text="@string/activity_main_menu_txt_btn_exit_app" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>